show num not full firebase object in Words Used

--- a/src/app/game/game.tpl.html
+++ b/src/app/game/game.tpl.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <div class="well">
-      <p>Words used {{game.currentGame.wordsUsed}} of {{game.currentGame.requirements.needed}}</p>
+      <p>Words used {{game.currentGame.wordsUsedNum}} of {{game.currentGame.requirements.needed}}</p>
     </div>
   </div>
   <div class="col-md-10">
